Made the spacing in the tasks list better spaced out. Disabled stop task button when the task is already running. Added planning of needed tasks in the TODO.

--- a/d-tracker.css
+++ b/d-tracker.css
@@ -27,6 +27,10 @@ tek.ui.class.display {
 	border-width: 2;
 }
 
+.project{
+	color: #666;
+}
+
 tek.ui.class.input { 
 	border-width: 1;
 }
